# xubinh_webserver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/logging/: build.sh  main.cc
example/: CMakeLists.txt
example/echo/: CMakeLists.txt  client.cc  server.cc
example/echo/client/: CMakeLists.txt  client.cc
example/echo/client/include/: stdinfd.h
example/echo/client/src/: CMakeLists.txt  stdinfd.cc
example/echo/server/: CMakeLists.txt  server.cc
example/http/: CMakeLists.txt
example/http/server/: 404.html  CMakeLists.txt  index.html  server.cc
example/http/server/include/: http_parser.h  http_request.h  http_response.h  http_server.h
example/http/server/src/: CMakeLists.txt  http_parser.cc  http_request.cc  http_response.cc  http_server.cc
include/: event_dispatcher.h  event_file_descriptor.h  event_loop.h  event_loop_thread.h  event_loop_thread_pool.h  event_poller.h  eventfd.h  file_descriptor.h  http_parser.h  http_request.h  http_response.h  inet_address.h  listen_socketfd.h  log_buffer.h  log_builder.h  log_collector.h  log_file.h  pollable_file_descriptor.h  preconnect_socketfd.h  signalfd.h  socketfd.h  tcp_buffer.h  tcp_client.h  tcp_connect_socketfd.h  tcp_server.h  timer.h  timer_container.h  timer_identifier.h  timerfd.h
include/util/: address_of.h  alignment.h  any.h  blocking_queue.h  condition_variable.h  current_thread.h  datetime.h  errno.h  format.h  lock_free_queue.h  mutex.h  mutex_guard.h  physical_file.h  slab_allocator.h  this_thread.h  thread.h  time_point.h  type_name.h  type_traits.h
include/utils/: current_thread.h  datetime.h  errno.h  format.h  physical_file.h  thread.h  type_traits.h
script/: benchmark.py  build  build.sh  kill_server  perf.sh  perf_process  perf_start  profile.sh  run_client  run_server  test  test_server  webbench.py
script/echo/: run_server.sh
script/http/: benchmark.py  build.sh  perf.sh  perf_run_server  perf_test  profile.sh  run_server  run_server.sh  run_webbench.sh  test  test_server  webbench.py
src/: CMakeLists.txt  event_dispatcher.cc  event_file_descriptor.cc  event_loop.cc  event_loop_thread.cc  event_loop_thread_pool.cc  event_poller.cc  eventfd.cc  file_descriptor.cc  http_parser.cc  http_request.cc  http_response.cc  inet_address.cc  listen_socketfd.cc  log_buffer.cc  log_builder.cc  log_collector.cc  log_file.cc  pollable_file_descriptor.cc  preconnect_socketfd.cc  signalfd.cc  socketfd.cc  tcp_buffer.cc  tcp_client.cc  tcp_connect_socketfd.cc  tcp_server.cc  timer.cc  timer_container.cc  timerfd.cc
src/util/: alignment.cc  blocking_queue.cc  condition_variable.cc  current_thread.cc  datetime.cc  errno.cc  format.cc  mutex.cc  physical_file.cc  slab_allocator.cc  this_thread.cc  thread.cc  time_point.cc
src/utils/: current_thread.cc  datetime.cc  errno.cc  format.cc  physical_file.cc  thread.cc
test/: CMakeLists.txt  lock_free_queue.cc  logging.cc  test_lock_free_queue.cc  test_logging.cc
